# autolabel

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md
docs/: schema.md
python/: .gitignore  check_namespace.sh
python/registream-autolabel/: README.md  pyproject.toml
python/registream-autolabel/dev/: test_manual.py
python/registream-autolabel/src/registream/autolabel/: __init__.py  __main__.py  _accessor.py  _citation_data.py  _collapse.py  _commands.py  _datasets.py  _edit.py  _filters.py  _inference.py  _labels.py  _lookup.py  _pandas_patches.py  _repr.py  _scope.py  _seaborn.py  _shortcuts.py  _types.py
python/registream-autolabel/tests/: conftest.py  test_accessor.py  test_datasets.py  test_labels.py  test_lookup.py  test_notification_scope.py  test_parity_25_depth_agnostic.py  test_plots_seaborn.py  test_repr.py  test_shortcuts.py  test_smoke.py  test_top_level_commands.py  test_universal_patches.py
r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md
r/R/: autolabel.R  citation.R  citation_data.R  collapse.R  datasets.R  filters.R  inference.R  info.R  lab.R  labels.R  lookup.R  registry.R  scope.R  scope_browse.R  suggest.R  telemetry.R
r/dev/: exercise-real.R  simple_label.R  test_manual.R  validate_visitor.R
r/inst/: CITATION
r/man/: autolabel-internal.Rd  autolabel.Rd  cite.Rd  info.Rd  rs_lab.Rd  rs_lookup.Rd  rs_update_datasets.Rd  scope.Rd  suggest.Rd
r/tests/: testthat.R
stata/dev/: test_manual.do  write_test_manifest.py
stata/src/: _al_utils.ado  autolabel.ado  autolabel.sthlp
stata/tests/: run_all_tests.do
(+28 files in other folders)
